# molgx-core

./: .gitignore  README.md  requirements.txt  setup.cfg
src/molgx/: __init__.py
