[metadata]
name = molgx
version = attr: molgx.__version__
description = Package for Molecule Generation Experience (MolGX).
author= MolGX team
long_description_content_type=text/markdown
long_description = file: README.md
keywords = MolGX Generative Models Inference Training
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    ipython
    matplotlib
    numpy
    pandas
    rdkit-pypi
    scikit-learn
    scipy
setup_requires =
    setuptools
package_dir =
    = src
packages=find_namespace:
include_package_data = True

[options.entry_points]
console_scripts=
    gt4sd-trainer = gt4sd.cli.trainer:main
    gt4sd-pl-to-hf = gt4sd.cli.pl_to_hf_converter:main
    gt4sd-hf-to-st = gt4sd.cli.hf_to_st_converter:main

[options.packages.find]
where = src

[options.package_data]
gt4sd =
    py.typed
    training_pipelines/*json
    training_pipelines/tests/*json
    training_pipelines/tests/*smi

[options.extras_require]
extras =
    cogmol-inference
    molgx

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503

